Fixed banner over scrollbar

--- a/reciplease-app/src/App.css
+++ b/reciplease-app/src/App.css
@@ -1,14 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu');
+
+.App{
+  font-family: 'Ubuntu';
+  overflow: hidden;
+}
+
 .banner {
-  background-position: 0%;
+  position: fixed;
   background-color: #FF6B6B;
   background-size: cover;
-  width: 100%;
   height: 10vh;
   line-height: 10vh;
-  position: fixed;
   top: 0;
-  left: 0;
   padding: 0.4em;
+  overflow: hidden;
+  bottom: auto;
+  width: 100%;
 }
 
 .logo{
@@ -35,8 +42,14 @@
 }
 
 .content{
+  max-height: 90vh;
   margin-top: 10vh;
-  padding: 3rem;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  direction: ltr;
+  position: relative;
+  top: 0;
+  padding-left: 5vw;
 }
 
 .topCollection {
